added zoom in inclined confined

--- a/SWI1D/inclined1conf.ipynb
+++ b/SWI1D/inclined1conf.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:317fecffcb8cfcabdf58f8fcab810dfd991b671ecbe41af2be5fa357b0e301d3"
+  "signature": "sha256:7caa512e2034350c84b129c8ec032d0c6d0f120ea40b41f1c275ab36042069cb"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -28,7 +28,7 @@
       "\n",
       "This version describes an inclined confined aquifer. Watch out! Large parts of the cells stand dry!\n",
       "\n",
-      "The SWI solution behaves like it should and doesnt crawl upward as "
+      "The SWI solution behaves like it should and doesnt crawl upward"
      ]
     },
     {
@@ -357,14 +357,6 @@
       }
      ],
      "prompt_number": 56
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [],
-     "language": "python",
-     "metadata": {},
-     "outputs": []
     }
    ],
    "metadata": {}
