--- a/SWI1D/4cell1_woOcBgt.ipynb
+++ b/SWI1D/4cell1_woOcBgt.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {
     "collapsed": true
    },
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {
     "collapsed": true
    },
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {
     "collapsed": true
    },
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {
     "collapsed": true
    },
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "metadata": {
     "collapsed": true
    },
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "metadata": {
     "collapsed": true
    },
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "metadata": {
     "collapsed": true
    },
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "metadata": {
     "collapsed": true
    },
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "metadata": {
     "collapsed": true
    },
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 24,
    "metadata": {
     "collapsed": false
    },
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 25,
    "metadata": {
     "collapsed": true
    },
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 26,
    "metadata": {
     "collapsed": false
    },
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 27,
    "metadata": {
     "collapsed": false
    },
@@ -229,9 +229,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 28,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": true
    },
    "outputs": [
     {
@@ -454,7 +455,7 @@
        "AEUStAAAABTp/wM86ON//PqWLgAAAABJRU5ErkJggg==\n"
       ],
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x9cb06d8>"
+       "<matplotlib.figure.Figure at 0x9c49908>"
       ]
      },
      "metadata": {},
@@ -476,6 +477,110 @@
     "ax.axis(gr.limLC([-0.2,0.2,-0.2,0.2]))\n",
     "leg = ax.legend(loc='lower left', numpoints=1)\n",
     "leg._drawFrame = False"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "                      VOLUMETRIC SWI ZONE BUDGET FOR ENTIRE MODEL\n",
+    "                     AT END OF TIME STEP10000 IN STRESS PERIOD   1\n",
+    "                                      ZONE     1\n",
+    "  -----------------------------------------------------------------------------------\n",
+    "\n",
+    "        CUMULATIVE VOLUMES      L**3       RATES FOR THIS TIME STEP      L**3/T\n",
+    "        ------------------                 ------------------------\n",
+    "\n",
+    "              IN:                                      IN:\n",
+    "              ---                                      ---\n",
+    "             BOUNDARIES =          50.0015            BOUNDARIES =       5.0000E-03\n",
+    "          CONSTANT HEAD =           0.0000         CONSTANT HEAD =           0.0000\n",
+    "            ZONE CHANGE =       2.0018E-02           ZONE CHANGE =           0.0000\n",
+    "       ZONE CHG TIP/TOE =       5.9999E-03      ZONE CHG TIP/TOE =           0.0000\n",
+    "            ZONE MIXING =           0.0000           ZONE MIXING =           0.0000\n",
+    "\n",
+    "               TOTAL IN =          50.0275              TOTAL IN =       5.0000E-03\n",
+    "\n",
+    "             OUT:                                     OUT:\n",
+    "             ----                                     ----\n",
+    "             BOUNDARIES =           0.0000            BOUNDARIES =           0.0000\n",
+    "          CONSTANT HEAD =          49.8714         CONSTANT HEAD =       5.0000E-03\n",
+    "            ZONE CHANGE =           0.1546           ZONE CHANGE =           0.0000\n",
+    "       ZONE CHG TIP/TOE =       5.9999E-03      ZONE CHG TIP/TOE =           0.0000\n",
+    "            ZONE MIXING =           0.0000           ZONE MIXING =           0.0000\n",
+    "\n",
+    "              TOTAL OUT =          50.0320             TOTAL OUT =       5.0000E-03\n",
+    "\n",
+    "               IN - OUT =      -4.5395E-03              IN - OUT =       9.3132E-10\n",
+    "\n",
+    "    PERCENT DISCREPANCY =          -0.01     PERCENT DISCREPANCY =           0.00\n",
+    "\n",
+    "\n",
+    "\n",
+    "                      VOLUMETRIC SWI ZONE BUDGET FOR ENTIRE MODEL\n",
+    "                     AT END OF TIME STEP10000 IN STRESS PERIOD   1\n",
+    "                                      ZONE     2\n",
+    "  -----------------------------------------------------------------------------------\n",
+    "\n",
+    "        CUMULATIVE VOLUMES      L**3       RATES FOR THIS TIME STEP      L**3/T\n",
+    "        ------------------                 ------------------------\n",
+    "\n",
+    "              IN:                                      IN:\n",
+    "              ---                                      ---\n",
+    "             BOUNDARIES =           0.0000            BOUNDARIES =           0.0000\n",
+    "          CONSTANT HEAD =           0.0000         CONSTANT HEAD =           0.0000\n",
+    "            ZONE CHANGE =           0.1546           ZONE CHANGE =           0.0000\n",
+    "       ZONE CHG TIP/TOE =       1.8834E-02      ZONE CHG TIP/TOE =           0.0000\n",
+    "            ZONE MIXING =           0.0000           ZONE MIXING =           0.0000\n",
+    "\n",
+    "               TOTAL IN =           0.1734              TOTAL IN =           0.0000\n",
+    "\n",
+    "             OUT:                                     OUT:\n",
+    "             ----                                     ----\n",
+    "             BOUNDARIES =           0.0000            BOUNDARIES =           0.0000\n",
+    "          CONSTANT HEAD =           0.1300         CONSTANT HEAD =           0.0000\n",
+    "            ZONE CHANGE =       3.2853E-02           ZONE CHANGE =           0.0000\n",
+    "       ZONE CHG TIP/TOE =       5.9999E-03      ZONE CHG TIP/TOE =           0.0000\n",
+    "            ZONE MIXING =           0.0000           ZONE MIXING =           0.0000\n",
+    "\n",
+    "              TOTAL OUT =           0.1689             TOTAL OUT =           0.0000\n",
+    "\n",
+    "               IN - OUT =       4.5692E-03              IN - OUT =           0.0000\n",
+    "\n",
+    "    PERCENT DISCREPANCY =           2.67     PERCENT DISCREPANCY =           0.00\n",
+    "\n",
+    "\n",
+    " HEAD WILL BE SAVED ON UNIT   51 AT END OF TIME STEP10000, STRESS PERIOD    1\n",
+    "1\n",
+    "  VOLUMETRIC BUDGET FOR ENTIRE MODEL AT END OF TIME STEP10000, STRESS PERIOD   1\n",
+    "  ------------------------------------------------------------------------------\n",
+    "\n",
+    "     CUMULATIVE VOLUMES      L**3       RATES FOR THIS TIME STEP      L**3/T\n",
+    "     ------------------                 ------------------------\n",
+    "\n",
+    "           IN:                                      IN:\n",
+    "           ---                                      ---\n",
+    "             STORAGE =           0.0000               STORAGE =           0.0000\n",
+    "       CONSTANT HEAD =       1.4306E-02         CONSTANT HEAD =           0.0000\n",
+    "               WELLS =          50.0015                 WELLS =       5.0000E-03\n",
+    "          SWIADDTOCH =         149.7491            SWIADDTOCH =       1.5000E-02\n",
+    "\n",
+    "            TOTAL IN =         199.7649              TOTAL IN =       2.0000E-02\n",
+    "\n",
+    "          OUT:                                     OUT:\n",
+    "          ----                                     ----\n",
+    "             STORAGE =           0.0000               STORAGE =           0.0000\n",
+    "       CONSTANT HEAD =         199.7248         CONSTANT HEAD =       2.0000E-02\n",
+    "               WELLS =           0.0000                 WELLS =           0.0000\n",
+    "          SWIADDTOCH =       4.9679E-02            SWIADDTOCH =           0.0000\n",
+    "\n",
+    "           TOTAL OUT =         199.7745             TOTAL OUT =       2.0000E-02\n",
+    "\n",
+    "            IN - OUT =      -9.6436E-03              IN - OUT =           0.0000\n",
+    "\n",
+    " PERCENT DISCREPANCY =          -0.00     PERCENT DISCREPANCY =           0.00"
    ]
   },
   {
